--- a/style.css
+++ b/style.css
@@ -17,6 +17,20 @@ body {
     font-weight: bold;
 }
 
+p {
+    font-size: 14px;
+}
+
+h2 {
+    font-weight: bold;
+    font-size: 23px;
+    margin-bottom: 20px;
+}
+
+a.font-black {
+    color: #000 !important;
+}
+
 
 /******************
 
@@ -64,4 +78,28 @@ ABOUT
 
 #about .icons a {
     color: rgb(0, 0, 0);
+}
+
+
+/********************************
+
+PROJECT
+
+**********************************/
+
+#project {
+    margin: 60px auto;
+    width: 80%
+}
+
+#project h2 {
+    text-align: center;
+}
+
+#project .card img {
+    width: 100%;
+}
+
+#project .card-title {
+    font-weight: bold;
 }
